# Smart-Advisor

./: .env.example  .gitignore  AGENT.md  AGENTS.md  Dockerfile.db  README.md  docker-compose.yml  index.html  pyproject.toml  requirements-dev.txt
backend/: .env  .env.example  Dockerfile  Makefile  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py
backend/app/api/dependencies/: auth.py
backend/app/api/routes/: __init__.py  accounts.py  ai_timing.py  debug.py  decisions.py  forecast.py  ingest.py  montecarlo.py  portfolio.py  sentiment.py  signals.py  simulate.py  symbols.py
backend/app/config/: __init__.py  settings.py
backend/app/core/: logging.py  telemetry.py
backend/app/db/: base.py  init.py  session.py
backend/app/indicators/: compute.py  gap_down.py
backend/app/ingest/: client.py  fx.py  prices.py
backend/app/migrations/: alembic.ini  env.py  script.py.mako
backend/app/migrations/versions/: 0001_initial.py  0002_add_portfolio_symbol.py  0003_add_portfolio_account.py  0004_add_daily_bar_ohlc.py  0005_add_intraday_bar_cache.py  0006_add_ai_timing_history.py  0007_add_session_summary.py
backend/app/models/: __init__.py  ai_timing.py  analyst.py  daily.py  dashboard.py  forecast.py  intraday.py  macro.py  portfolio.py  sentiment.py  session_summary.py
backend/app/providers/: alpha_vantage.py  ibkr_service.py
backend/app/rules/: engine.py
backend/app/schemas/: __init__.py  decisions.py  forecast.py  montecarlo.py  portfolio.py  sentiment.py  signals.py  simulate.py  snapshots.py  symbols.py
backend/app/services/: market_data.py  portfolio.py  snapshots.py  unrealized.py
backend/scripts/: compute_indicators.py  ingest_prices.py  load_seed.py  recompute_snapshots.py
backend/smart_advisor/: __init__.py  config.py  fx.py  models.py  pipeline.py
backend/smart_advisor/api/: __init__.py  admin.py  auth.py  database.py  main.py  models.py  schemas.py  security.py
backend/sql/: 001_add_user_role_column.sql  schema.sql
backend/tests/: conftest.py  test_alpha_vantage.py  test_auth_api.py  test_gap_down.py  test_hypo_pnl.py  test_lot_math.py  test_montecarlo_api.py  test_pipeline.py  test_unrealized.py
devops/cron/: ai_timing_daily.yaml
docs/: operations-and-developer-guide.md
frontend/: .eslintrc.json  Dockerfile  README.md  angular.json  karma.conf.js  nginx.conf  package-lock.json  package.json  tsconfig.json
frontend/src/: index.html  main.ts  styles.scss  telemetry.ts
ib-gateway/: Dockerfile
services/ai_timing/: Dockerfile  README.md  __init__.py  config.py  etl.py  main.py  (+1 more)
tradvfrontend/: Dockerfile  README.md  angular.json  nginx.conf  package-lock.json  package.json
twfrontend/: Dockerfile  README.md  angular.json  package-lock.json  package.json  tailwind.config.js
(+230 files in other folders)
