[project]
name = "smart-advisor"
version = "0.0.0"
requires-python = ">=3.11"
description = "Smart Advisor workspace tooling"
authors = [{ name = "Smart Advisor" }]

[project.optional-dependencies]
dev = [
    "lightgbm",
    "joblib",
    "pandas",
    "pyarrow",
    "pytest",
    "flake8",
    "mypy",
]
