[project]
name = "smart-advisor"
version = "0.1.0"
description = "Core analytics primitives for the Smart Advisor missed opportunity engine"
authors = [{name = "Mahmoud's Family"}]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=3.2,<4",
    "uvicorn[standard]>=0.30",
    "pydantic[email]>=2.6",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "alembic>=1.13",
    "pandas>=2.2",
    "numpy>=1.26",
    "opentelemetry-sdk>=1.24",
    "opentelemetry-exporter-otlp>=1.24",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.45b0",
    "opentelemetry-semantic-conventions>=0.45b0"
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.27",
    "pytest-mock>=3.12"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
